[gd_scene load_steps=14 format=3 uid="uid://bqjudw705l5eq"]

[ext_resource type="Script" path="res://bosses/boss_one.gd" id="1_g5n8p"]
[ext_resource type="Shader" uid="uid://bxglgqho27r6p" path="res://shaders/hit_flash_shader.tres" id="2_jjci3"]
[ext_resource type="Texture2D" uid="uid://b7doyrjl5l0il" path="res://tilemaps/ships.png" id="2_qrty0"]
[ext_resource type="PackedScene" uid="uid://b0ip1ow4i64ql" path="res://player/resources/health_system.tscn" id="3_lb1jy"]
[ext_resource type="PackedScene" uid="uid://p4pk2b64vi4e" path="res://enemies/turret_enemy.tscn" id="4_1bt2g"]
[ext_resource type="PackedScene" uid="uid://xfxlxvaa6fc6" path="res://bosses/boss_weapons/boss_shotgun.tscn" id="5_4ruon"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="6_lvugj"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="7_7mc8c"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="8_16qdv"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="9_1rsh7"]
[ext_resource type="PackedScene" uid="uid://cb2manrvpwtff" path="res://enemies/enemy_UI/enemy_health_bar.tscn" id="10_mh4ts"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yxcc7"]
shader = ExtResource("2_jjci3")
shader_parameter/enabled = true
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_743ce"]
size = Vector2(242, 3)

[node name="BossOne" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_g5n8p")

[node name="BossSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_yxcc7")
position = Vector2(-4, -2.84217e-14)
rotation = -3.14159
scale = Vector2(8, 4.856)
texture = ExtResource("2_qrty0")
region_enabled = true
region_rect = Rect2(67, 103, 31, 23)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, 17.5)
shape = SubResource("RectangleShape2D_743ce")

[node name="HealthSystem" parent="." instance=ExtResource("3_lb1jy")]
max_health = 1000
wait_time = 0.001

[node name="Phases" type="Node2D" parent="."]

[node name="PhaseOne" type="Node2D" parent="Phases"]

[node name="FrontRight" parent="Phases/PhaseOne" instance=ExtResource("4_1bt2g")]
position = Vector2(50, -5)
collision_mask = 5
move_speed = 0

[node name="BackRight" parent="Phases/PhaseOne" instance=ExtResource("4_1bt2g")]
position = Vector2(100, -25)
collision_mask = 5
move_speed = 0

[node name="FrontLeft" parent="Phases/PhaseOne" instance=ExtResource("4_1bt2g")]
position = Vector2(-50, -5)
collision_mask = 5
move_speed = 0

[node name="BackLeft" parent="Phases/PhaseOne" instance=ExtResource("4_1bt2g")]
position = Vector2(-100, -25)
collision_mask = 5
move_speed = 0

[node name="PhaseTwo" type="Node2D" parent="Phases"]

[node name="BossShotgun" parent="Phases/PhaseTwo" instance=ExtResource("5_4ruon")]
position = Vector2(0, 48)
rotation = 1.5708

[node name="BossShotgun2" parent="Phases/PhaseTwo" instance=ExtResource("5_4ruon")]
position = Vector2(-95, 20)
rotation = 1.5708

[node name="BossShotgun3" parent="Phases/PhaseTwo" instance=ExtResource("5_4ruon")]
position = Vector2(95, 20)
rotation = 1.5708

[node name="RightScreenNotifier" type="VisibleOnScreenNotifier2D" parent="Phases/PhaseTwo"]
position = Vector2(320, -17)
scale = Vector2(0.25, 2.5)

[node name="LeftScreenNotifier" type="VisibleOnScreenNotifier2D" parent="Phases/PhaseTwo"]
position = Vector2(-320, -21)
scale = Vector2(0.25, 2.5)

[node name="StateChart" type="Node" parent="."]
script = ExtResource("6_lvugj")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("7_7mc8c")
initial_state = NodePath("PhaseOne")

[node name="PhaseOne" type="Node" parent="StateChart/Root"]
script = ExtResource("8_16qdv")

[node name="EnterPhaseTwo" type="Node" parent="StateChart/Root/PhaseOne"]
script = ExtResource("9_1rsh7")
to = NodePath("../../PhaseTwo")
event = &"phase_two"

[node name="PhaseTwo" type="Node" parent="StateChart/Root"]
script = ExtResource("8_16qdv")

[node name="EnemyHealthBar" parent="." instance=ExtResource("10_mh4ts")]
offset_left = -321.0
offset_top = -91.0
offset_right = -321.0
offset_bottom = -91.0
_current_max_health = 1000
_current_health = 1000

[connection signal="boss_defeated" from="." to="Phases/PhaseTwo/BossShotgun" method="_on_boss_one_boss_defeated"]
[connection signal="health_updated" from="HealthSystem" to="." method="_on_health_system_health_updated"]
[connection signal="health_updated" from="HealthSystem" to="EnemyHealthBar" method="_on_health_system_health_updated"]
[connection signal="killed" from="HealthSystem" to="." method="_on_health_system_killed"]
[connection signal="screen_exited" from="Phases/PhaseTwo/RightScreenNotifier" to="." method="_on_right_screen_notifier_screen_exited"]
[connection signal="screen_exited" from="Phases/PhaseTwo/LeftScreenNotifier" to="." method="_on_left_screen_notifier_screen_exited"]
[connection signal="state_entered" from="StateChart/Root/PhaseTwo" to="." method="_on_phase_two_state_entered"]
